# plant-health-ai

./: .gitgnore  pyproject.toml
thesis/projects/plant_disease/: mobile_net.ipynb  mobile_net_raw.py  mobile_net_v2.ipynb  mobile_net_v3.ipynb  mobile_net_v3_plantdoc.ipynb
thesis/test/: plantdoc_mobile_net.ipynb
thesis/utils/: kaggle_utils.py  pytorch.py
